# openfang

./: Cargo.toml
.github/workflows/: build.yml
crates/openfang-api/src/: routes.rs  server.rs  webchat.rs
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/css/: components.css
crates/openfang-api/static/i18n/: en.json  i18n.js  zh.json
crates/openfang-api/static/js/: app.js
crates/openfang-api/static/js/pages/: knowledgegraph.js  settings.js
crates/openfang-cli/src/: main.rs
crates/openfang-desktop/: Cargo.toml  tauri.conf.json
crates/openfang-desktop/src/: commands.rs  lib.rs
crates/openfang-memory/src/: knowledge.rs  substrate.rs
tauri-gui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
tauri-gui/.github/workflows/: build.yml
tauri-gui/src/: App.css  App.tsx
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/capabilities/: default.json
tauri-gui/src-tauri/src/: api_proxy.rs  child_process.rs  commands.rs  config_manager.rs  knowledge_graph.rs  knowledge_optimizer.rs  main.rs
tauri-gui/src/components/: AgentList.tsx  BackendStatus.tsx  BackendStatusIndicator.tsx  ChatBox.tsx  FileAttachment.tsx  Graph3DScene.tsx  MessageBubble.tsx  NodeDetailsModal.tsx  SettingsForm.tsx  SidebarMenu.tsx  ThemeToggle.tsx
tauri-gui/src/layouts/: MainLayout.tsx
tauri-gui/src/pages/: AgentsPage.tsx  ChatPage.tsx  KnowledgeGraph3D.tsx  SettingsPage.tsx
tauri-gui/src/services/: apiClient.ts  stream_handler.ts  tauri_commands.ts
tauri-gui/src/stores/: agentStore.ts  chatStore.ts  configStore.ts
tauri-gui/src/styles/: global.css
tauri-gui/src/types/: index.ts
