[package]
name = "openfang-tauri-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"

# OpenFang core — 知识图谱通过 MemorySubstrate API 访问
openfang-memory = { path = "../../crates/openfang-memory" }
openfang-types = { path = "../../crates/openfang-types" }

# Shared deps (workspace versions)
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Tauri-specific deps (not in workspace)
toml = "0.9"
dirs = "6"
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
